--- a/solari.html
+++ b/solari.html
@@ -1,4 +1,4 @@
-<html><head>
+<html><head></head><body>
     <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
       <style>
         .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
@@ -11,9 +11,7 @@
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-
-    <title>Image di Paola Braga - Solari</title>
-
+  <title>Image di Paola Braga - Solari</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <!-- mobile settings -->
@@ -33,15 +31,13 @@
   <script type="text/javascript" src="./extra/modernizr.min.js"></script>
   <style type="text/css">
     .subtitle {
-    font-family: 'Open Sans';
-    font-size: 28px;
-    line-height: 26px;
-    padding-bottom: 10;
-    margin: 0;
-}
+        font-family: 'Open Sans';
+        font-size: 28px;
+        line-height: 26px;
+        padding-bottom: 10;
+        margin: 0;
+    }
   </style>
-
-  </head><body>
   <header id="header">
     <nav class="navbar navbar-inverse" role="navigation">
       <!-- add "white" class for white nav bar -->
@@ -63,7 +59,7 @@
             <li>
               <a href="chisiamo.html">CHI SIAMO</a>
             </li>
-            <li >
+            <li>
               <a href="trattamenti.html">TRATTAMENTI</a>
             </li>
             <li>
@@ -97,14 +93,33 @@
               </div>
               <div class="col-md-6">
                 <h3 class="subtitle">I solari institut esthederm non sono come gli altri</h3>
-                <p class="lead2">Formule brevettate, texture ultra-sensoriali, una profumazione calda e sensoriale e preservazione del capitale di giovinezza, il tutto per garantire risultati di bellezza e protezione ottimali.</p>
+                <p class="lead2">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
+                  sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
+                  risultati di bellezza e protezione ottimali.</p>
               </div>
             </div>
           </div>
         </div>
         <!-- -->
+        <br>
         <div class="divider">
           <!-- lines divider -->
+        </div>
+        
+         <div class="p-y-lg section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <h3 class="subtitle">I solari institut esthederm non sono come gli altri</h3>
+                <p class="lead2 text-right">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
+                  sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
+                  risultati di bellezza e protezione ottimali.</p>
+              </div><div class="col-md-6">
+                <a><img src="foto_news/solari2.jpg" class="img-fluid img-thumbnail"></a>
+              </div>
+              
+            </div>
+          </div>
         </div>
       </div>
       <!-- /container -->
@@ -136,7 +151,7 @@
   <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
   <script type="text/javascript" src="./extra/scripts.js"></script>
   <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
-    Go to http://www.google.com/analytics/ for more information. -->
+  Go to http://www.google.com/analytics/ for more information. -->
   <!--<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
