--- a/prodotti.html
+++ b/prodotti.html
@@ -1,14 +1,14 @@
-<html><head></head><body><div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
-        <style>
-            .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
-        </style>
-    </div>
-    <script async="" src="./extra/analytics.js"></script>
-    <script type="text/javascript">
-        window["_gaUserPrefs"] = { ioo : function() { return true; } }
-    </script>
-<!--<![endif]-->
-
+<html><head></head><body>
+        <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
+            <style>
+                .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
+            </style>
+        </div>
+        <script async="" src="./extra/analytics.js"></script>
+        <script type="text/javascript">
+            window["_gaUserPrefs"] = { ioo : function() { return true; } }
+        </script>
+    <!--<![endif]-->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Image di Paola Braga - Prodotti</title>
@@ -30,8 +30,6 @@
     <!-- Morenizr -->
     <script type="text/javascript" src="./extra/modernizr.min.js"></script>
     <style type="text/css"></style>
-
-
     <header id="header">
         <nav class="navbar navbar-inverse" role="navigation">
             <!-- add "white" class for white nav bar -->
@@ -75,27 +73,35 @@
     <section id="middle">
         <div class="alternate">
             <div class="container">
-                    <header>
-                        <h1 class="text-center">PRODOTTI</h1>
-                        <p class="lead2 text-center">Con Omeoenergetica , offriamo alle nostre clienti molto più che semplice bellezza.<br/><br/>
-Un trattamento estetico che rimane in superficie rischia infatti di dare risultati che svaniscono in breve.<br/><br/>
-Omeoenergetica invece entra in profondità e agisce a diversi livelli, in base al principio che ogni singola parte non può essere isolata dall'altra. Solo così è possibile risolvere in modo radicale problemi frequenti come la cellulite e l'adipe localizzata, le gambe pesanti e l'ipotonia dei tessuti, l'invecchiamento del viso e quello del corpo. L'obiettivo fondamentale è di risvegliare le energie complessive nascoste nel fisico che, con il tempo o lo stress, subiscono blocchi e alterazioni. Sollecitando i punti chiave attraverso cui scorre l'energia
-vitale, vengono ridistribuite armoniosamente le cariche energetiche naturali e ricreata quella situazione di equilibrio interno che si riflette in una pelle giovane, sana e luminosa.
-</p>
-                    </header>
-
-
-
-                    <div class="divider">
-                        <!-- lines divider -->
-                    </div>
+                <header>
+                    <h1 class="text-center">PRODOTTI</h1>
+                    <p class="lead2 text-center">Con Omeoenergetica , offriamo alle nostre clienti molto più che semplice
+                        bellezza.
+                        <br>
+                        <br>Un trattamento estetico che rimane in superficie rischia infatti di dare
+                        risultati che svaniscono in breve.
+                        <br>
+                        <br>Omeoenergetica invece entra in profondità e agisce a diversi livelli,
+                        in base al principio che ogni singola parte non può essere isolata dall'altra.
+                        Solo così è possibile risolvere in modo radicale problemi frequenti come
+                        la cellulite e l'adipe localizzata, le gambe pesanti e l'ipotonia dei tessuti,
+                        l'invecchiamento del viso e quello del corpo. L'obiettivo fondamentale
+                        è di risvegliare le energie complessive nascoste nel fisico che, con il
+                        tempo o lo stress, subiscono blocchi e alterazioni. Sollecitando i punti
+                        chiave attraverso cui scorre l'energia vitale, vengono ridistribuite armoniosamente
+                        le cariche energetiche naturali e ricreata quella situazione di equilibrio
+                        interno che si riflette in una pelle giovane, sana e luminosa.</p>
+                </header>
+                <div class="divider">
+                    <!-- lines divider -->
+                </div>
                 <div class="row gallery">
                     <div class="col-md-12">
                         <div class="section">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <img src="extra/prodotti.jpg" class="center-block img-responsive">
+                                        <img src="prodotti1.jpg" class="center-block img-responsive">
                                     </div>
                                 </div>
                             </div>
@@ -142,6 +148,6 @@ vitale, vengono ridistribuite armoniosamente le cariche energetiche naturali e r
 			ga('send', 'pageview');
 		</script>
 		-->
-
+    
 
 </body></html>
