--- a/chisiamo.html
+++ b/chisiamo.html
@@ -17,7 +17,8 @@
   <!-- mobile settings -->
   <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
   <!-- WEB FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">  <!-- CORE CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
+  <!-- CORE CSS -->
   <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
@@ -74,14 +75,13 @@
       <div class="container">
         <header>
           <h1 class="uppercase text-center">CHI SIAMO</h1>
-          <p class="lead2 text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus
+          <p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus
             nulla, commodo a sodales sed, dignissim pretium nunc. Nam et lacus neque.
             Ut enim massa, sodales tempor convallis et, iaculis ac massa.</p>
         </header>
         <div class="divider">
           <!-- lines divider -->
         </div>
-        
         <div class="row" style="padding-top:20px;">
           <div class="col-md-6">
             <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive" style="width:200px;">
