--- a/chisiamo.html
+++ b/chisiamo.html
@@ -109,6 +109,9 @@
             <p class="text-left">Responsabile</p>
           </div>
         </div>\</div>
+
+    </div>
+    <div>
       <div class="clearfix spacer">
         <!-- 60px spacer -->
       </div>
