--- a/trattamenti.html
+++ b/trattamenti.html
@@ -16,10 +16,7 @@
   <!-- mobile settings -->
   <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
   <!-- WEB FONTS -->
-
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
-
-
   <!-- CORE CSS -->
   <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -119,141 +116,147 @@
             </div>
           </div>
         </div>
+
+    </div>
+    </div>
+
+
         <!-- /GALLERY -->
         <!-- -->
-        <div class="row menu">
-          <!-- item -->
-          <div class="item col-md-10 col-md-offset-1 margin-bottom20">
-            <h2>
-              <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica®.</h2>
-            <!--
-            name -->
-            <p>
-              <em>Spesso basta guardarti in faccia per capire che sei di ritorno da un periodo
-                di vacanza e di riposo. Sul tuo volto, è dipinta un’espressione distesa
-                e luminosa che parla di relax, serenità ed energie recuperate. La tua pelle
-                racconta la vita che fai, i tuoi orari, cosa mangi e cosa respiri. Per
-                lasciarti alle spalle stress e smog, regala al tuo viso un trattamento
-                viso di Omeoenergetica®: il trattamento che rende la tua pelle più vitale,
-                luminosa ed elastica. In poco tempo tornerà a respirare e a splendere.
-                E tu con lei. .</em>
-            </p>
-            <!-- short desc -->
-          </div>
-          <!-- /item -->
-          <!-- item -->
-          <!-- /item -->
-          <!-- item -->
-          <div class="item col-md-10 col-md-offset-1  margin-bottom20">
-            <h2>
-              <i class="fa fa-dot-circle-o"></i>Trattamento Nutrizionale del Viso.</h2>
-            <!-- name -->
-            <p>
-              <em>E’ un trattamento rapido, intensivo, apporta ossigeno e nutrimento al
-                tessuto, ideale anche come trattamento di mantenimento.</em>
-            </p>
-            <!-- short desc -->
-          </div>
-          <!-- /item -->
-          <!-- item -->
-          <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
-            <h2>
-              <i class="fa fa-dot-circle-o"></i>Trattamento Rebalancing della cute.</h2>
-            <!-- name -->
-            <p>
-              <em>E’ un intervento globale dove all’azione specifica sul viso si accompagna
-                una tecnica manuale di fisioestetica, Reset Body, per ridurre tensioni
-                e contratture, sbloccare i nodi energetici. Una vera esperienza di benessere
-                e ringiovanimento.</em>
-            </p>
-            <!-- short desc -->
-          </div>
-          <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
-            <h2>
-              <i class="fa fa-dot-circle-o"></i>Trattamento contorno occhi e labbra</h2>
-            <!-- name -->
-            <p>
-              <em>L’obiettivo del trattamento è stimolare intensamente le attività cutanee
-                di queste zone così vulnerabili allo stress e favorire i meccanismi di
-                autoprotezione.il trattamento contrasta il rilassamento dei tessuti, minimizza
-                i rilievi cutanei riduce le borse sotto gli occhi ripristinando i meccanismi
-                emolinfatici.</em>
-            </p>
-            <!-- short desc -->
-          </div>
-          <!-- /item -->
-          <!-- item -->
-          <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
-            <h2>
-              <i class="fa fa-dot-circle-o"></i>Il recupero della forma: Reuvenating Body Sculpture Method di Omeoenergetica
-              ®.</h2>
-            <!-- name -->
-            <p>
-              <em>Ognuno è medico di se stesso. Non è solo un modo di dire, è una realtà
-                del tuo corpo. La salute e la bellezza nascono da dentro, dall’energia
-                che il tuo corpo sviluppa e che di volta in volta è in grado di esprimere,
-                permettendoti di splendere: con te stessa e con gli altri. Il segreto di
-                Omeoenergetica® sta proprio qui: nel non pretendere di modificare il tuo
-                corpo con innaturali interventi esterni, ma nel liberare tutto il tuo potenziale
-                energetico. Senza forzare il tuo organismo, ma sfruttando semplicemente
-                al meglio il tempo a tua disposizione, Omeoenergetica® saprà restituirti
-                la perfetta armonia tra tutti gli elementi psichici e fisici, creando un
-                benessere diffuso.</em>
-            </p>
-            <!-- short desc -->
-          </div>
-          <!-- /item -->
-          <!-- item -->
-          <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
-            <h2>
-              <i class="fa fa-dot-circle-o"></i>La scultura del tuo corpo.</h2>
-            <!-- name -->
-            <p>
-              <em>Trattamento estetico per il dimagrimento localizzato e diffuso. Agire
-                sui cosiddetti “punti critici”: glutei, cosce, fianchi, braccia, zone in
-                cui il grasso si accumula più facilmente rispetto alle altre. E’ un trattamento
-                che permette di aumentare il metabolismo locale dei grassi e perdere centimetri
-                solo dove è necessario. Tecnica manuale, una speciale tecnologia che riporta
-                le zone fredde a 37 ° e prodotti specifici di permetteranno di recuperare
-                la forma migliore o di prevenire l’insorgenza del problema.</em>
-            </p>
-            <!-- short desc -->
-          </div>
-          <!-- /item -->
-          <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
-            <h2>
-              <i class="fa fa-dot-circle-o"></i>Trattamento per la cellulite e gambe pesanti</h2>
-            <!-- name -->
-            <p>
-              <em>Rilancia contemporaneamente i meccanismi di drenaggio linfatico di liquidi
-                e tossine, del sistema micro circolatorio e del metabolismo dei grassi
-                per contrastare efficacemente le cause che provocano la cellulite e gambe
-                pesanti. Una vera e propria esperienza di benessere per le tue gambe.</em>
-            </p>
-            <!-- short desc -->
-          </div>
-          <!-- /item -->
-          <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
-            <h2>
-              <i class="fa fa-dot-circle-o"></i>Trattamento di Rebalancing per il recupero di vitalità</h2>
-            <!-- name
-            -->
-            <p>
-              <em>Per recuperare e rinforzare le energie vitali del corpo ogniqualvolta
-                se ne senta la necessità: dopo un periodo di sedentarietà, in particolari
-                momenti di stress, quando il corpo inizia ad inviare segnali di accumulo
-                di tossine o si manifestano i primi inestetismi legati a un metabolismo
-                rallentato. Il corpo riacquista quell’equilibrio energetico necessario
-                a mantenere attive tutte le funzioni vitali. Fin da subito si avverte una
-                nuova vitalità uno stato di benessere generale che si protrae nei giorni
-                successivi al trattamento.</em>
-            </p>
-            <!-- short desc -->
-          </div>
-          <!-- /item -->
+        <div class="container">
+          <div class="row menu">
+            <!-- item -->
+            <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+              <h2>
+                <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica®.</h2>
+              <!--
+              name -->
+              <p>
+                <em>Spesso basta guardarti in faccia per capire che sei di ritorno da un periodo
+                  di vacanza e di riposo. Sul tuo volto, è dipinta un’espressione distesa
+                  e luminosa che parla di relax, serenità ed energie recuperate. La tua pelle
+                  racconta la vita che fai, i tuoi orari, cosa mangi e cosa respiri. Per
+                  lasciarti alle spalle stress e smog, regala al tuo viso un trattamento
+                  viso di Omeoenergetica®: il trattamento che rende la tua pelle più vitale,
+                  luminosa ed elastica. In poco tempo tornerà a respirare e a splendere.
+                  E tu con lei. .</em>
+              </p>
+              <!-- short desc -->
+            </div>
+            <!-- /item -->
+            <!-- item -->
+            <!-- /item -->
+            <!-- item -->
+            <div class="item col-md-10 col-md-offset-1  margin-bottom20 dashed-bottom">
+              <h2>
+                <i class="fa fa-dot-circle-o"></i>Trattamento Nutrizionale del Viso.</h2>
+              <!-- name -->
+              <p>
+                <em>E’ un trattamento rapido, intensivo, apporta ossigeno e nutrimento al
+                  tessuto, ideale anche come trattamento di mantenimento.</em>
+              </p>
+              <!-- short desc -->
+            </div>
+            <!-- /item -->
+            <!-- item -->
+            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+              <h2>
+                <i class="fa fa-dot-circle-o"></i>Trattamento Rebalancing della cute.</h2>
+              <!-- name -->
+              <p>
+                <em>E’ un intervento globale dove all’azione specifica sul viso si accompagna
+                  una tecnica manuale di fisioestetica, Reset Body, per ridurre tensioni
+                  e contratture, sbloccare i nodi energetici. Una vera esperienza di benessere
+                  e ringiovanimento.</em>
+              </p>
+              <!-- short desc -->
+            </div>
+            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+              <h2>
+                <i class="fa fa-dot-circle-o"></i>Trattamento contorno occhi e labbra</h2>
+              <!-- name -->
+              <p>
+                <em>L’obiettivo del trattamento è stimolare intensamente le attività cutanee
+                  di queste zone così vulnerabili allo stress e favorire i meccanismi di
+                  autoprotezione.il trattamento contrasta il rilassamento dei tessuti, minimizza
+                  i rilievi cutanei riduce le borse sotto gli occhi ripristinando i meccanismi
+                  emolinfatici.</em>
+              </p>
+              <!-- short desc -->
+            </div>
+            <!-- /item -->
+            <!-- item -->
+            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+              <h2>
+                <i class="fa fa-dot-circle-o"></i>Il recupero della forma: Reuvenating Body Sculpture Method di Omeoenergetica
+                ®.</h2>
+              <!-- name -->
+              <p>
+                <em>Ognuno è medico di se stesso. Non è solo un modo di dire, è una realtà
+                  del tuo corpo. La salute e la bellezza nascono da dentro, dall’energia
+                  che il tuo corpo sviluppa e che di volta in volta è in grado di esprimere,
+                  permettendoti di splendere: con te stessa e con gli altri. Il segreto di
+                  Omeoenergetica® sta proprio qui: nel non pretendere di modificare il tuo
+                  corpo con innaturali interventi esterni, ma nel liberare tutto il tuo potenziale
+                  energetico. Senza forzare il tuo organismo, ma sfruttando semplicemente
+                  al meglio il tempo a tua disposizione, Omeoenergetica® saprà restituirti
+                  la perfetta armonia tra tutti gli elementi psichici e fisici, creando un
+                  benessere diffuso.</em>
+              </p>
+              <!-- short desc -->
+            </div>
+            <!-- /item -->
+            <!-- item -->
+            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+              <h2>
+                <i class="fa fa-dot-circle-o"></i>La scultura del tuo corpo.</h2>
+              <!-- name -->
+              <p>
+                <em>Trattamento estetico per il dimagrimento localizzato e diffuso. Agire
+                  sui cosiddetti “punti critici”: glutei, cosce, fianchi, braccia, zone in
+                  cui il grasso si accumula più facilmente rispetto alle altre. E’ un trattamento
+                  che permette di aumentare il metabolismo locale dei grassi e perdere centimetri
+                  solo dove è necessario. Tecnica manuale, una speciale tecnologia che riporta
+                  le zone fredde a 37 ° e prodotti specifici di permetteranno di recuperare
+                  la forma migliore o di prevenire l’insorgenza del problema.</em>
+              </p>
+              <!-- short desc -->
+            </div>
+            <!-- /item -->
+            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+              <h2>
+                <i class="fa fa-dot-circle-o"></i>Trattamento per la cellulite e gambe pesanti</h2>
+              <!-- name -->
+              <p>
+                <em>Rilancia contemporaneamente i meccanismi di drenaggio linfatico di liquidi
+                  e tossine, del sistema micro circolatorio e del metabolismo dei grassi
+                  per contrastare efficacemente le cause che provocano la cellulite e gambe
+                  pesanti. Una vera e propria esperienza di benessere per le tue gambe.</em>
+              </p>
+              <!-- short desc -->
+            </div>
+            <!-- /item -->
+            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+              <h2>
+                <i class="fa fa-dot-circle-o"></i>Trattamento di Rebalancing per il recupero di vitalità</h2>
+              <!-- name
+              -->
+              <p>
+                <em>Per recuperare e rinforzare le energie vitali del corpo ogniqualvolta
+                  se ne senta la necessità: dopo un periodo di sedentarietà, in particolari
+                  momenti di stress, quando il corpo inizia ad inviare segnali di accumulo
+                  di tossine o si manifestano i primi inestetismi legati a un metabolismo
+                  rallentato. Il corpo riacquista quell’equilibrio energetico necessario
+                  a mantenere attive tutte le funzioni vitali. Fin da subito si avverte una
+                  nuova vitalità uno stato di benessere generale che si protrae nei giorni
+                  successivi al trattamento.</em>
+              </p>
+              <!-- short desc -->
+            </div>
+            <!-- /item -->
         </div>
+        <!-- /container -->
       </div>
-      <!-- /container -->
     </div>
   </section>
   <!-- /MIDDLE -->
