--- a/trattamenti.html
+++ b/trattamenti.html
@@ -19,6 +19,10 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
   <!-- CORE CSS -->
   <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
+
+
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
   <link href="./extra/owl.theme.css" rel="stylesheet" type="text/css">
@@ -26,9 +30,13 @@
   <link href="./extra/magnific-popup.css" rel="stylesheet" type="text/css">
   <!-- THEME CSS -->
   <link href="./extra/layout.css" rel="stylesheet" type="text/css">
-  <!-- Morenizr -->
-  <script type="text/javascript" src="./extra/modernizr.min.js"></script>
-  <style type="text/css"></style>
+
+<style>
+em{
+    font-size:14px;
+}
+</style>
+
   <header id="header">
     <nav class="navbar navbar-inverse" role="navigation">
       <!-- add "white" class for white nav bar -->
@@ -126,9 +134,9 @@
         <div class="container">
           <div class="row menu">
             <!-- item -->
-            <div class="item col-md-10 col-md-offset-1 margin-bottom20 dashed-bottom">
+            <div class="item col-md-11 col-md-offset-1 margin-bottom20 dashed-bottom">
               <h2>
-                <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica®.</h2>
+                <i class="fa fa-dot-circle-o"></i>Il benessere scritto in faccia: Reuvenating Anti Aging Method di Omeoenergetica ®.</h2>
               <!--
               name -->
               <p>
@@ -147,19 +155,21 @@
             <!-- item -->
             <!-- /item -->
             <!-- item -->
-            <div class="item col-md-10 col-md-offset-1  margin-bottom20 dashed-bottom">
+            <div class="item col-md-11 col-md-offset-1  margin-bottom20 dashed-bottom">
               <h2>
                 <i class="fa fa-dot-circle-o"></i>Trattamento Nutrizionale del Viso.</h2>
               <!-- name -->
               <p>
                 <em>E’ un trattamento rapido, intensivo, apporta ossigeno e nutrimento al
                   tessuto, ideale anche come trattamento di mantenimento.</em>
+
+                  <!-- <em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus nulla.</em> -->
               </p>
               <!-- short desc -->
             </div>
             <!-- /item -->
             <!-- item -->
-            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+            <div class="item col-md-11 col-md-offset-1 dashed-bottom margin-bottom20">
               <h2>
                 <i class="fa fa-dot-circle-o"></i>Trattamento Rebalancing della cute.</h2>
               <!-- name -->
@@ -171,7 +181,7 @@
               </p>
               <!-- short desc -->
             </div>
-            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+            <div class="item col-md-11 col-md-offset-1 dashed-bottom margin-bottom20">
               <h2>
                 <i class="fa fa-dot-circle-o"></i>Trattamento contorno occhi e labbra</h2>
               <!-- name -->
@@ -186,7 +196,7 @@
             </div>
             <!-- /item -->
             <!-- item -->
-            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+            <div class="item col-md-11 col-md-offset-1 dashed-bottom margin-bottom20">
               <h2>
                 <i class="fa fa-dot-circle-o"></i>Il recupero della forma: Reuvenating Body Sculpture Method di Omeoenergetica
                 ®.</h2>
@@ -207,7 +217,7 @@
             </div>
             <!-- /item -->
             <!-- item -->
-            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+            <div class="item col-md-11 col-md-offset-1 dashed-bottom margin-bottom20">
               <h2>
                 <i class="fa fa-dot-circle-o"></i>La scultura del tuo corpo.</h2>
               <!-- name -->
@@ -223,7 +233,7 @@
               <!-- short desc -->
             </div>
             <!-- /item -->
-            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+            <div class="item col-md-11 col-md-offset-1 dashed-bottom margin-bottom20">
               <h2>
                 <i class="fa fa-dot-circle-o"></i>Trattamento per la cellulite e gambe pesanti</h2>
               <!-- name -->
@@ -236,7 +246,7 @@
               <!-- short desc -->
             </div>
             <!-- /item -->
-            <div class="item col-md-10 col-md-offset-1 dashed-bottom margin-bottom20">
+            <div class="item col-md-11 col-md-offset-1 dashed-bottom margin-bottom20">
               <h2>
                 <i class="fa fa-dot-circle-o"></i>Trattamento di Rebalancing per il recupero di vitalità</h2>
               <!-- name
