--- a/chisiamo.html
+++ b/chisiamo.html
@@ -82,33 +82,77 @@
         <div class="divider">
           <!-- lines divider -->
         </div>
-        <div class="row" style="padding-top:20px;">
-          <div class="col-md-6">
-            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive" style="width:200px;">
+        <div class="row" >
+
+          <div class="col-md-offset-4 col-md-4">
+                  <div class="thumbnail">
+
+                    <!-- image -->
+                    <img class="img-responsive" src="images/1.jpg" alt="team">
+
+                    <!-- caption -->
+                    <div class="caption text-center">
+                      <h4><!-- name + occupation -->
+                        Paola Braga
+                        <small class="block fsize13">Responsabile</small>
+                      </h4>
+
+                    </div>
+                    <!-- /caption -->
+
+                  </div>
           </div>
-          <div class="col-md-6" style="margin-left:0px;">
-            <h3 class="text-left">Paola Braga</h3>
-            <p class="text-left">Responsabile</p>
-          </div>
+
+
         </div>
-        <div class="row" style="padding-top:10px;">
-          <div class="col-md-6">
-            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive" style="width:200px;">
+
+        <div class="row" >
+
+          <div class="col-md-offset-4 col-md-4">
+                  <div class="thumbnail">
+
+                    <!-- image -->
+                    <img class="img-responsive" src="images/1.jpg" alt="team">
+
+                    <!-- caption -->
+                    <div class="caption text-center">
+                      <h4><!-- name + occupation -->
+                        Paola Braga
+                        <small class="block fsize13">Responsabile</small>
+                      </h4>
+
+                    </div>
+                    <!-- /caption -->
+
+                  </div>
           </div>
-          <div class="col-md-6" style="margin-left:0px;">
-            <h3 class="text-left">Paola Braga</h3>
-            <p class="text-left">Responsabile</p>
-          </div>
+
+
         </div>
-        <div class="row" style="padding-top:10px;">
-          <div class="col-md-6">
-            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png" class="center-block img-circle img-responsive" style="width:200px;">
+
+        <div class="row" >
+
+          <div class="col-md-offset-4 col-md-4">
+                  <div class="thumbnail">
+
+                    <!-- image -->
+                    <img class="img-responsive" src="images/1.jpg" alt="team">
+
+                    <!-- caption -->
+                    <div class="caption text-center">
+                      <h4><!-- name + occupation -->
+                        Paola Braga
+                        <small class="block fsize13">Responsabile</small>
+                      </h4>
+
+                    </div>
+                    <!-- /caption -->
+
+                  </div>
           </div>
-          <div class="col-md-6" style="margin-left:0px;">
-            <h3 class="text-left">Paola Braga</h3>
-            <p class="text-left">Responsabile</p>
-          </div>
-        </div>\</div>
+
+
+        </div>
 
     </div>
     <div>
