--- a/prodotti.html
+++ b/prodotti.html
@@ -42,7 +42,7 @@
 						</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <div class="collapse navbar-collapse" style="background-color:white;" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a href="index.html">HOME</a>
